First go at basic content for OII.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,6 +30,6 @@
 
     </nav>
 
-    <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
+    <p><small>&copy; {{ site.time | date: '%Y' }} <a href="https://iilab.org">iilab</a></small> <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0; display:inline; margin:-2px 0;" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a><br><small>Theme <a href="https://github.com/poole/hyde">Hyde</a> by <a href="https://github.com/mdo">mdo</a></small></p>
   </div>
 </div>
