--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -122,7 +122,7 @@ a.sidebar-nav-item:focus {
  */
 
 .content {
-  padding-top:    4rem;
+  padding-top:    2rem;
   padding-bottom: 4rem;
 }
 
@@ -136,6 +136,7 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 64em) {
   .content {
+    max-width: 95%;
     margin-left: 22rem;
     margin-right: 4rem;
   }
