--- a/css/site.css
+++ b/css/site.css
@@ -168,7 +168,8 @@ blockquote p {
 /* Larger than phone */
 @media (min-width: 550px) {
   .header {
-    margin-top: 18rem; }
+    margin-top: 9rem; 
+    margin-bottom: 6rem; }
   .value-props {
     margin-top: 9rem;
     margin-bottom: 7rem; }
