--- a/css/site.css
+++ b/css/site.css
@@ -2,6 +2,14 @@ p img {
   max-width: 100%;
   box-sizing: border-box;
 }
+
+.anchorjs-link {
+  transition: all .25s linear;
+}
+*:hover > .anchorjs-link {
+  margin-left: -1.125em !important;
+}
+
 /* Shared
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .button.button-primary {
